--- a/senguo.cc/admin/static/css/admin-shop-set.css
+++ b/senguo.cc/admin/static/css/admin-shop-set.css
@@ -17,6 +17,7 @@
 .add-address-box .add-address2-list li{width:100%;float:left;margin-top:5px;}
 
 .new-notice-title{width:470px;margin-bottom:20px;font-size:14px;}
+.new-notice-link{width:470px;margin-bottom:20px;font-size:14px;}
 .new-notice-detail{width:470px;height:100px;margin-bottom:20px;font-size:14px;}
 
 .info-set-list{border:1px solid #eee;border-bottom:none;}
@@ -196,3 +197,7 @@
 .type-choose .circle{display:inline-block;width:18px;height:18px;border-radius:50%;border:1px solid #ddd;margin-right:5px;float:left;}
 .iti{width:600px;float:left;margin-bottom:10px;}
 .iti-last{width:600px;float:left;}
+
+.link-type{float:left}
+.link-type li{display:inline-block;width:150px;height:30px;background-color:#ddd;line-height:30px;border-radius:2px;cursor:pointer;text-align:center;float:left;margin-right:10px;}
+.link-type li.active{background-color:#44b549;color:#fff;}
