--- a/senguo.cc/admin/templates/m-admin/shop-set-notice.html
+++ b/senguo.cc/admin/templates/m-admin/shop-set-notice.html
@@ -11,36 +11,90 @@
 {% block content %}
 {% set arrNum = ['一','二','三','四','五','六','七','八','九','十','十一','十二','十三','十四','十五','十六','十七','十八','十九','二十'] %}
 <div class="wrap-shop-set pb45">
-    {% for index,notice in enumerate(notices) %}
-    <ul class="notice-list mt15">
-        <li class="notice-title">
-            <div class="fr">
-                <span class="switch-btn {% if notice.active==1 %}switch-abtn{% end %} switch-notice"  data-id="{{notice.id}}"><i></i><span>{% if notice.active==1 %}已启用{% else %}未启用{% end %}</span></span>
-                <span class="del-notice ml10 c666 hide"  data-id="{{notice.id}}">删除</span>
-                <a href="{{reverse_url('MadminSetAttr')}}?action=addNotice&id={{notice.id}}" class="ml10 c666">编辑</a>
-            </div>
-            <span class="dgreen">公告{% if arrNum[index] %}{{arrNum[index]}}{% end %}</span>
-        </li>
-        <li class="group">
-            <span class="notice-left">摘要</span>
-            <div class="notice-text fr">
-                {{notice.summary or '未设置'}}
-            </div>
-        </li>
-        <li class="group">
-            <span class="notice-left">详情</span>
-            <div class="notice-text fr">
-                {{notice.detail or '未设置'}}
-            </div>
-        </li>
-        <li class="group">
-            <span class="notice-img-left">图片</span>
-            <div class="notice-img fr">
-                <img src="{{notice.img_url or '/static/images/holder_fruit.jpg'}}?imageView2/1/w/180/h/100" alt="公告图片"/>
-            </div>
-        </li>
+    <ul class="notice-type-choose">
+        <li class="active">普通公告</li>
+        <li>活动公告</li>
     </ul>
-    {% end %}
+    <div class="set-list">
+        {% for index,notice in enumerate(notices) %}
+        {% if notice._type == 0%}
+        <ul class="notice-list mt15">
+            <li class="notice-title">
+                <div class="fr">
+                    <span class="switch-btn {% if notice.active==1 %}switch-abtn{% end %} switch-notice"  data-id="{{notice.id}}"><i></i><span>{% if notice.active==1 %}已启用{% else %}未启用{% end %}</span></span>
+                    <span class="del-notice ml10 c666 hide"  data-id="{{notice.id}}">删除</span>
+                    <a href="{{reverse_url('MadminSetAttr')}}?action=addNotice&id={{notice.id}}" class="ml10 c666">编辑</a>
+                </div>
+                <span class="dgreen">公告{% if arrNum[index] %}{{arrNum[index]}}{% end %}</span>
+            </li>
+            <li class="group">
+                <span class="notice-left">摘要</span>
+                <div class="notice-text fr">
+                    {{notice.summary or '未设置'}}
+                </div>
+            </li>
+            <li class="group">
+                <span class="notice-left">详情</span>
+                <div class="notice-text fr">
+                    {{notice.detail or '未设置'}}
+                </div>
+            </li>
+             <li class="group">
+                <span class="notice-left"> 链接</span>
+                <div class="notice-text fr">
+                    <a href="{{notice.link or ''}}">{{notice.link or '未设置'}}</a>
+                </div>
+            </li>
+            <li class="group">
+                <span class="notice-img-left">图片</span>
+                <div class="notice-img fr">
+                    <img src="{{notice.img_url or '/static/images/holder_fruit.jpg'}}?imageView2/1/w/180/h/100" alt="公告图片"/>
+                </div>
+            </li>
+        </ul>
+        {% end %}
+        {% end %}
+    </div>
+    <div class="set-list" style="display:none">
+        {% for index,notice in enumerate(notices) %}
+        {% if notice._type > 0%}
+        <ul class="notice-list mt15">
+            <li class="notice-title">
+                <div class="fr">
+                    <span class="switch-btn {% if notice.active==1 %}switch-abtn{% end %} switch-notice"  data-id="{{notice.id}}"><i></i><span>{% if notice.active==1 %}已启用{% else %}未启用{% end %}</span></span>
+                    <span class="del-notice ml10 c666 hide"  data-id="{{notice.id}}">删除</span>
+                    <a href="{{reverse_url('MadminSetAttr')}}?action=addNotice&id={{notice.id}}" class="ml10 c666">编辑</a>
+                </div>
+                <span class="dgreen">公告{% if arrNum[index] %}{{arrNum[index]}}{% end %}</span>
+            </li>
+            <li class="group">
+                <span class="notice-left">摘要</span>
+                <div class="notice-text fr">
+                    {{notice.summary or '未设置'}}
+                </div>
+            </li>
+            <li class="group">
+                <span class="notice-left">详情</span>
+                <div class="notice-text fr">
+                    {{notice.detail or '未设置'}}
+                </div>
+            </li>
+             <li class="group">
+                <span class="notice-left"> 链接</span>
+                <div class="notice-text fr">
+                    <a href="{{notice.link or ''}}">{{notice.link or '未设置'}}</a>
+                </div>
+            </li>
+            <li class="group">
+                <span class="notice-img-left">图片</span>
+                <div class="notice-img fr">
+                    <img src="{{notice.img_url or '/static/images/holder_fruit.jpg'}}?imageView2/1/w/180/h/100" alt="公告图片"/>
+                </div>
+            </li>
+        </ul>
+        {% end %}
+        {% end %}
+    </div>
     <a href="{{reverse_url('MadminSetAttr')}}?action=addNotice" class="create-btn add-notice">+添加新公告</a>
 </div>
 {% end %}
