--- a/senguo.cc/admin/templates/admin/shop-notice-set.html
+++ b/senguo.cc/admin/templates/admin/shop-notice-set.html
@@ -21,9 +21,9 @@
                     <a class="stop-mode" href="javascript:;" style="display:none;">未启用</a>
                 </div>
             </td>
-            <td class="col-lg-3 address-show summary">{{notice.summary.strip() or '无'}}</td>
+            <td class="col-lg-3 address-show summary">{% if notice.summary %}{{notice.summary.strip() or '无'}}{% end %}</td>
             <td class="col-lg-3 address-edit" style="display:none;"><textarea class="notice_summary">{{notice.summary}}</textarea></td>
-            <td class="col-lg-4 address-show detail">{{notice.detail.strip() or '无'}}</td>
+            <td class="col-lg-4 address-show detail">{% if notice.detail %}{{notice.detail.strip() or '无'}}{% end %}</td>
             <td class="col-lg-4 address-edit" style="display:none;"> <textarea class="notice_detail">{{notice.detail}}</textarea></td>
             <td class="col-lg-3 address-show img_url">
                 <div class="notice_img_box">
