--- a/senguo.cc/admin/templates/superAdmin/count-base.html
+++ b/senguo.cc/admin/templates/superAdmin/count-base.html
@@ -67,7 +67,7 @@
             <!--  -->
             <!-- added by sunmh 2015年09月01日11:04:43 -->
             <li class="amount nav_item {{amount_active}}">
-                <a href="{{reverse_url('superAmountStatic')}}">余额统计</a>                
+                <a href="{{reverse_url('superAmountStatic')}}">资金流入统计</a>                
             </li>
             <!--  -->
         </ul>
