seckill goods detail

--- a/senguo.cc/admin/templates/admin/seckill-edit.html
+++ b/senguo.cc/admin/templates/admin/seckill-edit.html
@@ -132,7 +132,7 @@
                                                                                                                                                                </td>
                                                                                                                                                 </tr>
                                                                                                                                                 <tr>　　
-                                                                                                                                                               <td class="ver-top"><span class="ver-5 former-price" data-id="">原价（单选）</span></td>
+                                                                                                                                                               <td class="ver-top"><span class="ver-5 former-price" data-id="">请选择原价<br>（单选）</span></td>
                                                                                                                                                                <td class="ver-top">
                                                                                                                                                                              <div class="choose-price send-day clearfix hidden choose-charge-type" data-value="{{fruit_id_charge_type}}" data-flag="">  
 
