--- a/senguo.cc/admin/static/css/market-home.css
+++ b/senguo.cc/admin/static/css/market-home.css
@@ -28,7 +28,7 @@
 .goods-list-item .box{width:100%;height:100%;padding:5px;}
 .arrow{display:inline-block;position:absolute;bottom:3px;right:6px;width:0;height:0;border-style:solid;border-width:30px 14px 15px;transform:rotate(36deg);-ms-transform:rotate(38deg);-moz-transform:rotate(38deg);-webkit-transform:rotate(38deg);-o-transform:rotate(38deg); }
 .show-box{padding-right:10px;height:90px;}
-.sale{height:26px;line-height:26px;width:65px;overflow:hidden;margin-left:-2px;}
+.sale{height:26px;line-height:26px;width:60px;overflow:hidden;margin-left:-2px;white-space: nowrap;}
 .click-great{background-size:20px;position:relative;}
 .click-great em{display:inline-block;position:absolute;top:13px;width:16px;height:16px;background:url('../images/heart.png') no-repeat 0 0;background-size:32px;margin-left:-22px;margin-right:5px;}
 .clicked em{background-position:-16px 0 !important;}
@@ -131,6 +131,7 @@
 .price-tip{display: inline-block;color: #FF9800;cursor: pointer;padding: 0 4px;border-radius: 12px;border: 1px solid #ff9800;font-size: 12px;height: 18px;line-height: 16px;margin-left: 4px;vertical-align: 1px;transform: scale(0.9);-webkit-transform: scale(0.9);}
 .price-dif{-webkit-transform:scale(0.9);}
 .wrap-seckill-price{position: absolute;top: 4px;right: -20px;}
+.wrap-seckill-price-box{position: absolute;top: 70px;right: 10px;}
 /*swiper*/
 .img-list{width: 100%;height: 0;padding-bottom: 40%;position: relative;background-color: #fff;}
 .swiper-container{width: 100%;height: 0;padding-bottom: 40%;overflow: hidden;position: relative;}
