--- a/senguo.cc/admin/templates/customer/goods-detail.html
+++ b/senguo.cc/admin/templates/customer/goods-detail.html
@@ -29,18 +29,21 @@
         <div class="pagination"></div>
     </div>
     <div class="wrap-goods-info">
-        <p class="goods-title">{{good.name or ''}}</p>
+        <p class="goods-title">
+            <span>{{good.name or ''}}</span>
+            <span class="goods-tag">{% if good.activity_status==1 %}秒杀{% elif good.activity_status==2 %}限时折扣{% elif good.tag>1 %}{% if good.tag==2 %}限时折扣{% elif good.tag==3 %}热销水果{% elif good.tag==4 %}今日特价{% else %}新品上架{% end %}{% end %}</span>
+            {% if good.buy_limit>0 %}<span class="goods-tag">{% if good.buy_limit==1 %}限新用户{% elif good.buy_limit==2 %}限老用户{% else %}限充值用户{% end %}</span>{% end %}
+        </p>
         <p class="goods-num">
             <span id="dianzan" data-flag="{{good.favour_today}}" data-id="{{good.id}}"><span class="zan {% if good.favour_today %}zaned{% end %}"></span><span class="num">{{good.favour or 0}}</span></span>
             <span>&nbsp;销量 {{good.saled or 0}}</span>
         </p>
-        <p><span class="goods-tag">{% if good.activity_status==1 %}秒杀{% elif good.activity_status==2 %}限时折扣{% elif good.tag>1 %}{% if good.tag==2 %}限时折扣{% elif good.tag==3 %}热销水果{% elif good.tag==4 %}今日特价{% else %}新品上架{% end %}{% end %}</span>{% if good.buy_limit>0 %}<span class="goods-tag">{% if good.buy_limit==1 %}限新用户{% elif good.buy_limit==2 %}限老用户{% else %}限充值用户{% end %}</span>{% end %}</p>
         <p class="goods-info">{{good.intro or ''}}</p>
         <p class="f12 mt10" id="time_box" end_time="{{end_time}}"><span>距结束&nbsp;<span class="day"></span><span class="hour"></span><span class="minute"></span><span class="second"></span></span></p>
     </div>
     <ul class="wrap-choose-goods">
             {% for charge in charge_types %}
-            <li data-buy="{{charge['limit_today']}}" data-id="{{charge['id']}}" data-allow="{{charge['allow_num']}}" seckill_goods_id="charge['seckill_goods_id']">
+            <li data-buy="{{charge['limit_today']}}" data-id="{{charge['id']}}" data-allow="{{charge['allow_num']}}" seckill_goods_id="{{charge['seckill_goods_id']}}">
                 <span class="now-price">{{charge['price']}}元</span>
                 <span class="old-price">{% if charge['market_price'] and charge['market_price']>0 %}<span class="market-price">{{charge['market_price']}}元</span>{% end %}/<span class="number">{{charge['num']}}</span>{{charge['unit']}}</span>
                 {% if has_discount_activity>0 and good.activity_status==2 %}<span class="goods-tag activity-tag">{{charge['discount_rate']}}折</span>{% end %}
@@ -93,7 +96,7 @@
     {% else %}
     <ul class="goods-info-lst"></ul>
     {% end %}
-    <a href="javascript:;" class="shop-area add-cart" id="shop-area" data-href="{{reverse_url('customerShopProfile',handler.shop_code)}}">
+    <a href="javascript:;" class="shop-area add-cart clip" id="shop-area" data-href="{{reverse_url('customerShopProfile',handler.shop_code)}}">
         <span class="roll-bg shop-in">
             <i></i>
         </span>
