--- a/senguo.cc/admin/templates/customer/goods-detail.html
+++ b/senguo.cc/admin/templates/customer/goods-detail.html
@@ -12,7 +12,7 @@
 
 </script>
 {% if good %}
-<input type="hidden" value="{{handler.shop_code}}" is_activity="{{good.activity_status}}" has_discount_activity="{{has_discount_activity}}" id="shop_code"/>
+<input type="hidden" value="{{handler.shop_code}}" is_activity="{{good.activity_status}}" has_discount_activity="{{has_activity}}" id="shop_code"/>
 <div class="wrap-goods-detail pm80" data-id="{{good.id}}" data-limit="{{good.limit_num}}" data-storage="{{good.storage}}" data-buylimit="{{good.buy_limit}}" data-userlimit="{{good.userlimit}}">
     <div class="img-list">
         <a href="javascript:;" class="roll-bg back add-cart" id="back-bg" data-href="{{reverse_url('Market',handler.shop_code)}}"><i></i></a>
@@ -50,7 +50,7 @@
             <li data-buy="{{charge['limit_today']}}" data-allow="{{charge['allow_num']}}">
                 <span class="now-price">{{charge['price']}}元</span>
                 <span class="old-price">{% if charge['market_price'] and charge['market_price']>0 %}<span class="market-price">{{charge['market_price']}}元</span>{% end %}/<span class="number">{{charge['num']}}</span>{{charge['unit']}}</span>
-                {% if charge['has_discount_activity']>0 and good.activity_status==2 %}<span class="goods-tag activity-tag">{{charge['discount_rate']}}折</span>{% end %}
+                {% if charge['has_activity']>0 and good.activity_status==2 %}<span class="goods-tag activity-tag">{{charge['discount_rate']}}折</span>{% end %}
                 <div class="want-num" data-id="{{charge['id']}}" data-relate="{{charge['relate']}}">
                     <span class="minus minus-num">-</span>
                     <div class="input">1</div>
