--- a/senguo.cc/admin/templates/admin/shop-notice-set.html
+++ b/senguo.cc/admin/templates/admin/shop-notice-set.html
@@ -135,8 +135,8 @@
                     <div class="clearfix mt10">
                         <span class="pull-left set-left20 set-right20 font14">点击公告背景时：</span>
                         <ul class="link-type">
-                            <li class="{%if notice and notice.click_type == 0 or not notice%}active{% end %} fl" data-id="0">显示详情</li>
-                            <li class="{%if notice and notice.click_type == 1 %}active{% end %} fr" data-id="1">跳转链接</li>
+                            <li class="active fl" data-id="0">显示详情</li>
+                            <li class="fr" data-id="1">跳转链接</li>
                         </ul>
                     </div>
                     <div class="clearfix mt10">
