--- a/senguo.cc/admin/templates/admin/shop-notice-set.html
+++ b/senguo.cc/admin/templates/admin/shop-notice-set.html
@@ -20,6 +20,9 @@
         <td>操作</td>
     </tr>
     {% for notice in notices  %}
+    {% if not notice._type %}
+    {% set notice._type = 0%}
+    {% end %}
     {% if notice._type == 0 %}
     <tr class="set-list-item" data-id="{{notice.id}}">
         <td>
@@ -71,7 +74,10 @@
         <td>操作</td>
     </tr>
     {% for notice in notices  %}
-    {% if notice._type and notice._type > 0 %}
+    {% if not notice._type %}
+    {% set notice._type = 0%}
+    {% end %}
+    {% if notice._type > 0 %}
     <tr class="set-list-item" data-id="{{notice.id}}">
         <td>
             <div class="mode action-mode notice_active" data-status="{{notice.active}}">
