--- a/senguo.cc/admin/static/css/market-goods.css
+++ b/senguo.cc/admin/static/css/market-goods.css
@@ -47,11 +47,11 @@ table{width: 100%;border-collapse: collapse;table-layout: fixed;}
 .w90{width: 90px !important;}
 
 .wrap-goods-detail{position: relative;}
-.img-list{width: 100%;height: 0;padding-bottom: 60%;position: relative;background-color: #ebf0ef;}
-.swiper-container{width: 100%;height: 0;padding-bottom: 60%;overflow: hidden;position: relative;}
+.img-list{width: 100%;height: 0;padding-bottom: 60%;position: relative;overflow:hidden !important;background-color: #ebf0ef;max-height:800px;}
+.swiper-container{width: 100%;height: 0;padding-bottom: 60%;overflow:hidden !important;position: relative;max-height:800px;}
 @media screen and (max-width:640px){
-	.img-list{width: 100%;height:auto;padding-bottom:0;position: relative;background-color: #ebf0ef;min-height:192px;}
-	.swiper-container{width: 100%;height:auto;padding-bottom:0;overflow: hidden;position: relative;min-height:192px;}
+	.img-list{width: 100%;height:auto;padding-bottom:0;position: relative;overflow:hidden !important;background-color: #ebf0ef;min-height:192px;max-height:640px;}
+	.swiper-container{width:100%;height:auto;padding-bottom:0;overflow:hidden !important;position: relative;min-height:192px;max-height:640px;}
 }
 .swiper-slide>img{width: 100%;}
 .pagination{position: absolute;z-index:10;right:12px;bottom: 9px;white-space: nowrap;line-height: 1;}
