--- a/senguo.cc/admin/templates/customer/goods-detail.html
+++ b/senguo.cc/admin/templates/customer/goods-detail.html
@@ -46,7 +46,7 @@
             <li data-buy="{{charge['limit_today']}}" data-id="{{charge['id']}}" data-allow="{{charge['allow_num']}}" seckill_goods_id="{{charge['seckill_goods_id']}}">
                 <span class="now-price">{{charge['price']}}元</span>
                 <span class="old-price">{% if charge['market_price'] and charge['market_price']>0 %}<span class="market-price">{{charge['market_price']}}元</span>{% end %}/<span class="number">{{charge['num']}}</span>{{charge['unit']}}</span>
-                {% if has_activity>0 and good.activity_status==2 %}<span class="goods-tag activity-tag">{{charge['discount_rate']}}折</span>{% end %}
+                {% if charge['has_activity']>0 and good.activity_status==2 and charge['discount_rate']<10 %}<span class="goods-tag activity-tag">{{charge['discount_rate']}}折</span>{% end %}
                 {% if has_activity>0 and charge['is_seckill']==1 and good.activity_status==1 %}
                 <span class="goods-tag activity-tag">省{{charge['seckill_price_dif']}}元</span>
                 <div class="seckill-buy {% if charge['seckill_is_bought']==1 %}seckill-buy-yes{% end %}" data-relate="{{charge['relate']}}" data-id="{{charge['id']}}">抢!</div>
