--- a/senguo.cc/admin/templates/bbs/main.html
+++ b/senguo.cc/admin/templates/bbs/main.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
-{% block title %}{% end %}
+{% block title %}森果社区{% end %}
 {% block head %}
 {% end %}
 {% block content %}
 <div class="wrap-main group">
     <div class="wrap-right fr">
-        <a class="publish-box"></a>
+        <a href="javascript:;" class="publish-box"></a>
         <div class="aside-box box-border mt10">
             <p class="aside-title"><span>热门文章</span></p>
             <ul class="aside-list">
@@ -45,8 +45,6 @@
         </ul>
         <a href="javascript:;" class="more-btn mt10">加载更多</a>
     </div>
-</div>
-<div class="fix-center publish-btns">
 </div>
 <div class="pop-win pop-login hide" data-id="{{if_login}}">
     <div class="pop-content">
